glFusion ChangeLog

v1.1.0
------------
- Fixed issue with search truncating description text (Mark)
- Improved error handling when CTL cannot write to cache directory (Mark)
- Created (and converted all security profile hashes to) CACHE_security_hash() (Joe)
- CTL: Save some cycles in {!if var} processing, some debug traces, code cleanup (Joe)
- Upgraded Bad Behavior to v2.0.24 (Mark)
- attempting to change your password when your email address is 'invalid' causes
  password change but failed to make changes message. (M.Jervis Geeklog Team) (Mark)
- FileMgmt did not honor the logged in required to view for menu,
  search, and stats. (Mark)
- Forum did not honor the logged in required to view for the new post
  block, searching, and stats. (Mark)
- Clear CTL when stories are auto deleted or archived (Mark)
- Do not display profile page for anonymous users (Mark)
- Modified block editor to allow use of advanced editor (Mark)
- Added HTML filtering allow embed tag to configuration (Mark)
- Added css_compress configuration option to configuration (Mark)
- Added default sort order to configuration (Mark)
- Fixed missing </li> on parent menu without children nodes (Mark)
- Fixed issue where What's New and old cached stories were not updated when the
  story was set to auto archive or delete. (Mark)
- Fixed Forum notification email to actually point to the last reply where
  appropriate (Mark)
- Bugfix of template root hook for directories below layout/nouveau/ (Joe)
- Implemented new mailer - added support for secure SMTP (Mark)
- Fixed searching for non-installed plugins when open_basedir restrictions are in
  effect (GL bug #0000741)
- Story cache does not cache date format (Joe)
- Fixed broken image references in Site Tailor Install (Eric)
- Changed hard-coded "N/A" from Admins Only menu with a language file generated neutral "-" (Eric)
- Implemented js.php / css.php to consolidate all CSS and JS (Mark)
- Forum to always use HTML filter for html posts (Mark)